k8s/applications/media/vert/Deployment.vertd.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vertd
  namespace: vert
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vertd
      app.kubernetes.io/version: rolling
      app.kubernetes.io/component: backend
      app.kubernetes.io/part-of: vert
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: vert
      labels:
        app.kubernetes.io/name: vertd
        app.kubernetes.io/version: rolling
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: vert
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: vertd
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: vertd
          # Dockerfile: https://github.com/VERT-sh/vertd/blob/main/Dockerfile
          image: ghcr.io/vert-sh/vertd:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 256Mi, gpu.intel.com/xe: 1}
            limits: {memory: 256Mi, gpu.intel.com/xe: 1}
          ports:
            - {name: http, containerPort: 24153}
      #     volumeMounts:
      #       - {name: tmp-volume, mountPath: /tmp}
      #       - {name: cache-volume, mountPath: /cache}
      # volumes:
      #   - {name: tmp-volume, emptyDir: {}}
      #   - {name: cache-volume, emptyDir: {}}
