k8s/applications/media/vert/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vert-web
  namespace: vert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vert
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: vertd-web
  namespace: vert
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vertd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
