k8s/applications/media/vert/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
# OIDC:
# - https://gateway.envoyproxy.io/docs/tasks/security/oidc/
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-sso
  namespace: vert
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: vert-web}
  oidc:
    clientID: envoy
    clientSecret: {namespace: vert, kind: Secret, name: oidc}
    cookieConfig: {sameSite: Lax}
    cookieDomain: vert.karlsen.app
    # cookieNames: {accessToken: access-token, idToken: id-token}
    # logoutPath: /logout
    provider:
      issuer: https://auth.karlsen.fr
      authorizationEndpoint: https://auth.karlsen.fr/api/oidc/authorization
      tokenEndpoint: https://auth.karlsen.fr/api/oidc/token
    redirectURL: https://vert.karlsen.app/authelia/openid_connect/callback
    forwardAccessToken: false
    refreshToken: false
    passThroughAuthHeader: false
    # resources: []
    scopes: [openid, email, profile, groups]  # offline_access
